--- a/DriverTracker/Views/Home/Privacy.cshtml
+++ b/DriverTracker/Views/Home/Privacy.cshtml
@@ -3,4 +3,4 @@
 }
 <h2>@ViewData["Title"]</h2>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>(Insert your company's privacy policy here)</p>
