updated navbar links, completed data model

--- a/DriverTracker/Views/Shared/_Layout.cshtml
+++ b/DriverTracker/Views/Shared/_Layout.cshtml
@@ -27,8 +27,8 @@
                     <li class="nav-item active"><a class="nav-link" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="Drivers" asp-action="CompanyStats">Company-Wide Statistics</a></li>
-                    <li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="Drivers" asp-action="DriverStats">Driver Statistics</a></li>
+                    <li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="Analysts" asp-action="Index">Company-Wide Statistics</a></li>
+                    <li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="Drivers" asp-action="Index">Driver Statistics</a></li>
                 </ul>
             </div>
         </nav>
