added statistical analysis, reference to previous

--- a/DriverTracker/Views/Shared/_Layout.cshtml
+++ b/DriverTracker/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>@ViewData["Title"] - DriverTracker Transportation Analysis</title>
 
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <environment include="Development">
             <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
             <link rel="stylesheet" href="~/css/site.css" />
@@ -27,7 +28,7 @@
                     <li class="nav-item active"><a class="nav-link" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="Analysts" asp-action="Index">Company-Wide Statistics</a></li>
+                    <li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="Analysts" asp-action="Index">Analysts</a></li>
                     <li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="Drivers" asp-action="Index">Driver Statistics</a></li>
                 </ul>
             </div>
