--- a/DriverTracker/Views/Legs/Create.cshtml
+++ b/DriverTracker/Views/Legs/Create.cshtml
@@ -17,6 +17,10 @@
                 <select asp-for="DriverID" class ="form-control" asp-items="ViewBag.DriverID"></select>
             </div>
             <div class="form-group">
+                <label asp-for="PreviousLegID" class="control-label"></label>
+                <select asp-for="PreviousLegID" class="form-control" asp-items="ViewBag.PreviousLegID"></select>
+            </div>
+            <div class="form-group">
                 <label asp-for="StartAddress" class="control-label"></label>
                 <input asp-for="StartAddress" class="form-control" />
                 <span asp-validation-for="StartAddress" class="text-danger"></span>
