--- a/DriverTracker/Views/Legs/Create.cshtml
+++ b/DriverTracker/Views/Legs/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" asp-route-fromdriver="@(ViewData["FromDriverPage"] != null)">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="DriverID" class="control-label"></label>
@@ -68,7 +68,15 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    @ViewData["FromDriverPage"]
+    @if (ViewData["FromDriverPage"] != null)
+    {
+        <a asp-action="Details" asp-controller="Drivers" asp-route-id="@ViewData["FromDriverPage"]">Back to Driver Details</a>
+    }
+    else
+    {
+        <a asp-action="Index">Back to List</a>
+    }
 </div>
 
 @section Scripts {
