close #8 and close #10

--- a/DriverTracker/Views/Legs/Delete.cshtml
+++ b/DriverTracker/Views/Legs/Delete.cshtml
@@ -60,6 +60,12 @@
             @Html.DisplayFor(model => model.NumOfPassengersAboard)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.NumOfPassengersPickedUp)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.NumOfPassengersPickedUp)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Driver)
         </dt>
         <dd>
