--- a/DriverTracker/Views/Legs/Index.cshtml
+++ b/DriverTracker/Views/Legs/Index.cshtml
@@ -37,6 +37,9 @@
                 @Html.DisplayNameFor(model => model.NumOfPassengersAboard)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.NumOfPassengersPickedUp)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Driver)
             </th>
             <th></th>
@@ -68,6 +71,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NumOfPassengersAboard)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.NumOfPassengersPickedUp)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Driver.DriverID)
