--- a/DriverTracker/Views/Legs/Create.cshtml
+++ b/DriverTracker/Views/Legs/Create.cshtml
@@ -12,14 +12,17 @@
     <div class="col-md-4">
         <form asp-action="Create" asp-route-fromdriver="@(ViewData["FromDriverPage"] != null)">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            @if (ViewData["DriverID"] != null)
+            {   
+                <div class="form-group">
                 <label asp-for="DriverID" class="control-label"></label>
                 <select asp-for="DriverID" class ="form-control" asp-items="ViewBag.DriverID"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="PreviousLegID" class="control-label"></label>
-                <select asp-for="PreviousLegID" class="form-control" asp-items="ViewBag.PreviousLegID"></select>
-            </div>
+                </div>
+            }
+            else
+            {
+                @Html.Hidden("DriverID", ViewData["FromDriverPage"]);
+            }
             <div class="form-group">
                 <label asp-for="StartAddress" class="control-label"></label>
                 <input asp-for="StartAddress" class="form-control" />
@@ -59,6 +62,16 @@
                 <label asp-for="NumOfPassengersAboard" class="control-label"></label>
                 <input asp-for="NumOfPassengersAboard" class="form-control" />
                 <span asp-validation-for="NumOfPassengersAboard" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="NumOfPassengersAboard" class="control-label"></label>
+                <input asp-for="NumOfPassengersAboard" class="form-control" />
+                <span asp-validation-for="NumOfPassengersAboard" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="NumOfPassengersPickedUp" class="control-label"></label>
+                <input asp-for="NumOfPassengersPickedUp" class="form-control" />
+                <span asp-validation-for="NumOfPassengersPickedUp" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
