--- a/DriverTracker/Views/Shared/_Layout.cshtml
+++ b/DriverTracker/Views/Shared/_Layout.cshtml
@@ -48,6 +48,7 @@
             <script src="~/lib/jquery/dist/jquery.js"></script>
             <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
 
+            @* Angular scripts *@
             <script src="~/libs/runtime.js"></script>
             <script src="~/libs/polyfills.js"></script>
             <script src="~/libs/styles.js"></script>
