#13 added edit/add forms to drivers component

--- a/DriverTracker/Views/Drivers/Index.cshtml
+++ b/DriverTracker/Views/Drivers/Index.cshtml
@@ -15,7 +15,9 @@
     }
 </ul>
 
-<app-root></app-root>
+<environment include="Development">
+    <app-root></app-root>
+</environment>
 
 <h2>Drivers</h2>
 
