--- a/DriverTracker/src/app/drivers/drivers.component.html
+++ b/DriverTracker/src/app/drivers/drivers.component.html
@@ -1,5 +1,6 @@
 <h2>Drivers</h2>
 
+<form (ngSubmit)="onSubmit()" #driversForm="ngForm">
 <table class="table">
     <thead>
         <tr>
@@ -14,17 +15,43 @@
     </thead>
     <tbody>
         <tr *ngFor="let driver of drivers">
-            <td>
-                {{driver.name}}
+            <td [ngSwitch]="editing">
+                <input type="text" class="form-control" id="name" required name="name" value="{{driver.name}}"
+                 *ngSwitchCase="driver.driverID"/>
+                <span *ngSwitchDefault>{{driver.name}}</span>
             </td>
-            <td>
-                {{driver.licenseNumber}}
+            <td [ngSwitch]="editing">
+                <input type="text" class="form-control" id="licenseNumber" required name="licenseNumber" value="{{driver.licenseNumber}}"
+                       *ngSwitchCase="driver.driverID" />
+                <span *ngSwitchDefault>{{driver.licenseNumber}}</span>
             </td>
-            <td>
-                <a href="javascript:void(0);" (click)="editClicked(driver)">Edit</a> |
-                <a href="{{driver.detailUrl}}">Details</a> |
-                <a href="javascript:void(0);" (click)="showDeleteConfirm(driver)">Delete</a>
+            <td [ngSwitch]="editing">
+                <span *ngSwitchCase="driver.driverID">
+                    <button type="submit" class="btn btn-success" [disabled]="!driversForm.form.valid">Save</button>
+                    <button type="button" class="btn" (click)="cancelEdit()">Cancel</button>
+                </span>
+                <span *ngSwitchDefault>
+                    <a href="javascript:void(0);" (click)="editClicked(driver)">Edit</a> |
+                    <a href="javascript:void(0);" (click)="showDetails(driver)">Details</a> |
+                    <a href="javascript:void(0);" (click)="showDeleteConfirm(driver)">Delete</a>
+                </span>
             </td>
         </tr>
+        <tr *ngIf="adding; else addLink">
+            <td>
+                <input type="text" class="form-control" id="name" required name="name" />
+            </td>
+            <td>
+                <input type="text" class="form-control" id="licenseNumber" required name="licenseNumber" />
+            </td>
+            <td>
+                <button type="submit" class="btn btn-success" [disabled]="!driversForm.form.valid">Save</button>
+                <button type="button" class="btn" (click)="cancelAdd()">Cancel</button>
+            </td>
+        </tr>
+        <ng-template #addLink>
+            <a href="javascript:void(0);" (click)="addNew()">New Driver</a>
+        </ng-template>
     </tbody>
 </table>
+</form>
