closed #9, moved analysis logic to domain layer

--- a/DriverTracker/Views/Drivers/Details.cshtml
+++ b/DriverTracker/Views/Drivers/Details.cshtml
@@ -13,6 +13,8 @@
     {
         <li>Average pickup delay: @ViewData["AveragePickupDelay"]</li>
     }
+    <li>Total fares: @ViewData["TotalFares"]</li>
+    <li>Total fuel costs: @ViewData["TotalCosts"]</li>
 </ul>
 
 <h2>Driver Details</h2>
