--- a/DriverTracker/Views/Legs/Details.cshtml
+++ b/DriverTracker/Views/Legs/Details.cshtml
@@ -65,6 +65,12 @@
             @Html.DisplayFor(model => model.NumOfPassengersPickedUp)
         </dd>
         <dt>
+            @Html.DisplayNameFor(model => model.FuelCost)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.FuelCost)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Driver)
         </dt>
         <dd>
