--- a/DriverTracker/Views/Drivers/Index.cshtml
+++ b/DriverTracker/Views/Drivers/Index.cshtml
@@ -13,6 +13,9 @@
     {
         <li>Average pickup delay: @ViewData["AveragePickupDelay"]</li>
     }
+    <li>Total fares: @ViewData["TotalFares"]</li>
+    <li>Total fuel costs: @ViewData["TotalCosts"]</li>
+    <li>Net profit: @ViewData["NetProfit"]</li>
 </ul>
 
 <app-root></app-root>
