--- a/DriverTracker/Views/Legs/Edit.cshtml
+++ b/DriverTracker/Views/Legs/Edit.cshtml
@@ -64,6 +64,11 @@
                 <span asp-validation-for="NumOfPassengersPickedUp" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="FuelCost" class="control-label"></label>
+                <input asp-for="FuelCost" class="form-control" />
+                <span asp-validation-for="FuelCost" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </form>
