#2 added ASP.NET Identity scaffolds, and required a simple authorization to view driver stats page

--- a/DriverTracker/Views/Drivers/Index.cshtml
+++ b/DriverTracker/Views/Drivers/Index.cshtml
@@ -20,6 +20,10 @@
 
 <app-root></app-root>
 
+<form method="post" action="~/Identity/Account/Logout">
+    <button type="submit" value="Log out">Log out</button>
+</form>
+
 @* Angular scripts *@
 <script src="~/libs/runtime.js"></script>
 <script src="~/libs/polyfills.js"></script>
