#22 added ridership prediction to front end, updated button styles

--- a/DriverTracker/Views/Drivers/Details.cshtml
+++ b/DriverTracker/Views/Drivers/Details.cshtml
@@ -128,7 +128,7 @@
 }
 
 <div>
-    |
+    <a asp-action="Index" asp-controller="Predictor" asp-route-id="@Model.DriverID">Predictive Analytics</a> |
     <a asp-action="Edit" asp-route-id="@Model.DriverID">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
