enhanced interface styles with Bootstrap classes, and added logout button to all pages for authenticated users

--- a/DriverTracker/Views/Drivers/Delete.cshtml
+++ b/DriverTracker/Views/Drivers/Delete.cshtml
@@ -33,7 +33,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="DriverID" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Delete" class="btn btn-success mr-2" />
+        <a class="btn btn-default" asp-action="Index">Back to List</a>
     </form>
 </div>
