--- a/DriverTracker/Views/Drivers/Details.cshtml
+++ b/DriverTracker/Views/Drivers/Details.cshtml
@@ -47,7 +47,6 @@
 <h3>Driver's Legs</h3>
 
 <p>
-    <a asp-action="Create" asp-controller="Legs" asp-route-id="@Model.DriverID" asp-route-fromdriver="true">New Leg</a>
 </p>
 
 @if (Model.Legs != null && Model.Legs.Any())
@@ -117,18 +116,25 @@
                         @Html.DisplayFor(modelItem => item.NumOfPassengersPickedUp)
                     </td>
                     <td>
-                        <a asp-action="Edit" asp-controller="Legs" asp-route-id="@item.LegID" asp-route-driver="@item.Driver.DriverID">Edit</a> |
-                        <a asp-action="Details" asp-controller="Legs" asp-route-id="@item.LegID" asp-route-driver="@item.Driver.DriverID">Details</a> |
-                        <a asp-action="Delete" asp-controller="Legs" asp-route-id="@item.LegID" asp-route-driver="@item.Driver.DriverID">Delete</a>
+                        <span class="btn-group" role="group">
+                            <a class="btn btn-secondary" asp-action="Edit" asp-controller="Legs" asp-route-id="@item.LegID" asp-route-driver="@item.Driver.DriverID">Edit</a>
+                            <a class="btn btn-secondary" asp-action="Details" asp-controller="Legs" asp-route-id="@item.LegID" asp-route-driver="@item.Driver.DriverID">Details</a>
+                            <a class="btn btn-secondary" asp-action="Delete" asp-controller="Legs" asp-route-id="@item.LegID" asp-route-driver="@item.Driver.DriverID">Delete</a>
+                        </span>
                     </td>
                 </tr>
             }
+                <tr>
+                    <td colspan="10">
+                        <a class="btn btn-success" asp-action="Create" asp-controller="Legs" asp-route-id="@Model.DriverID" asp-route-fromdriver="true">New Leg</a>
+                    </td>
+                </tr>
         </tbody>
     </table>
 }
 
 <div>
-    <a asp-action="Index" asp-controller="Predictor" asp-route-id="@Model.DriverID">Predictive Analytics</a> |
-    <a asp-action="Edit" asp-route-id="@Model.DriverID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a class="btn btn-default mr-2" asp-action="Index" asp-controller="Predictor" asp-route-id="@Model.DriverID">Predictive Analytics</a>
+    <a class="btn btn-default mr-2" asp-action="Edit" asp-route-id="@Model.DriverID">Edit</a>
+    <a class="btn btn-default" asp-action="Index">Back to Drivers List</a>
 </div>
