Added new authorization rules to controllers.
The role permissions are now as follows:
 * Admin can view, create, update, or delete any records.
 * Analyst can view, create, or update records but cannot delete them.
 * A Driver can only view, create, or update records pertaining to him/her.

Also made some slight tweaks to page layout and format.

--- a/DriverTracker/Areas/Identity/Pages/Account/Login.cshtml
+++ b/DriverTracker/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,7 +2,7 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "Log in to DriverTracker";
 }
 
 <h2>@ViewData["Title"]</h2>
@@ -10,7 +10,6 @@
     <div class="col-md-4">
         <section>
             <form method="post">
-                <h4>Use a local account to log in.</h4>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
@@ -36,15 +35,16 @@
                 </div>
                 <div class="form-group">
                     <p>
-                        <a asp-page="./ForgotPassword">Forgot your password?</a>
+                        @* <a asp-page="./ForgotPassword">Forgot your password?</a> *@
                     </p>
                     <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        @* <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a> *@
                     </p>
                 </div>
             </form>
         </section>
     </div>
+    @*
     <div class="col-md-6 col-md-offset-2">
         <section>
             <h4>Use another service to log in.</h4>
@@ -75,6 +75,7 @@
             }
         </section>
     </div>
+        *@
 </div>
 
 @section Scripts {
