--- a/DriverTracker/Views/Analysts/Create.cshtml
+++ b/DriverTracker/Views/Analysts/Create.cshtml
@@ -13,9 +13,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="UserID" class="control-label"></label>
-                <input asp-for="UserID" class="form-control" />
-                <span asp-validation-for="UserID" class="text-danger"></span>
+                <label asp-for="UserIDString" class="control-label"></label>
+                <input asp-for="UserIDString" class="form-control" />
+                <span asp-validation-for="UserIDString" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Username" class="control-label"></label>
