--- a/DriverTracker/Views/Analysts/Details.cshtml
+++ b/DriverTracker/Views/Analysts/Details.cshtml
@@ -11,10 +11,10 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.UserID)
+            @Html.DisplayNameFor(model => model.UserIDString)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.UserID)
+            @Html.DisplayFor(model => model.UserIDString)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Username)
