--- a/DriverTracker/Views/Shared/_Layout.cshtml
+++ b/DriverTracker/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
             </div>
         </nav>
 
-        @await Component.InvokeAsync("CookieConsent");
+        @await Component.InvokeAsync("CookieConsent")
 
         <div class="container body-content">
             @if (User.Identity.IsAuthenticated)
