--- a/DriverTracker/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/DriverTracker/Areas/Identity/Pages/Account/Logout.cshtml
@@ -6,5 +6,6 @@
 
 <header>
     <h1>@ViewData["Title"]</h1>
-    <p>You have successfully logged out of the application.</p>
+    <p>You have successfully logged out of DriverTracker.</p>
+    <p><a asp-action="Index" asp-controller="Home">Return Home</a></a></p>
 </header>
