--- a/DriverTracker/Views/Analysts/Edit.cshtml
+++ b/DriverTracker/Views/Analysts/Edit.cshtml
@@ -14,9 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
             <div class="form-group">
-                <label asp-for="UserID" class="control-label"></label>
-                <input asp-for="UserID" class="form-control" />
-                <span asp-validation-for="UserID" class="text-danger"></span>
+                <label asp-for="UserIDString" class="control-label"></label>
+                <input asp-for="UserIDString" class="form-control" />
+                <span asp-validation-for="UserIDString" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Username" class="control-label"></label>
