--- a/DriverTracker/Views/Drivers/Delete.cshtml
+++ b/DriverTracker/Views/Drivers/Delete.cshtml
@@ -6,16 +6,16 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this driver profile?</h3>
 <div>
     <h4>Driver</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.UserID)
+            @Html.DisplayNameFor(model => model.UserIDString)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.UserID)
+            @Html.DisplayFor(model => model.UserIDString)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Name)
