Added #22 pickup predictor to frontend
Also added the required API controller functions to access the backend.

In addition, handling correctly unresolvable addresses in the geocoding API,
as well as handling first-time setup correctly in LocationClustering by not
assuming k = 0 and using a default number of 1 if the renumbering algorithm has
not yet run.

--- a/DriverTracker/src/app/predictor/predictor.component.html
+++ b/DriverTracker/src/app/predictor/predictor.component.html
@@ -1,5 +1,9 @@
 <h2>Ridership Prediction for Driver: {{driver.name}}</h2>
 
+<p>
+    Predict how many riders are likely <em>if a pickup occurs</em>.
+</p>
+
 <form (ngSubmit)="onSubmit()" #riderPredictionForm="ngForm">
     <div class="form-group">
         <label for="delay">Anticipated delay (min)</label>
