#22 Request fare class boundaries on init to avoid "undefined" issues.
Also made an explicit exception to handle insufficient data in the backend,
and setup the frontend component so that the page will scroll to reveal the results.

--- a/DriverTracker/Views/Shared/_Layout.cshtml
+++ b/DriverTracker/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                     <li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="Drivers" asp-action="Index">Driver Statistics</a></li>
+                    <li class="nav-item active"><a class="nav-link" asp-area="" asp-controller="PickupPredictor" asp-action="Index">Pickup Predictions</a></li>
                 </ul>
             </div>
         </nav>
