Added a token-based authentication scheme.
Frontend will now use a token obtained from the current session

Also made some minor simplifications to the database context code.

--- a/DriverTracker/src/app/drivers/drivers.component.html
+++ b/DriverTracker/src/app/drivers/drivers.component.html
@@ -47,7 +47,7 @@
                         <a class="btn btn-secondary" href="/Drivers/Details/{{driver.driverID}}">Details</a>
                         <button type="button" class="btn btn-secondary" (click)="editClicked(driver)">Edit</button>
                         <button type="button" class="btn btn-secondary" (click)="showDeleteConfirm(content, driver)">Delete</button>
-                        <a class="btn btn-secondary" href="/Predictor/Index/{{driver.driverID}}">Predictive Analytics</a>
+                        <a class="btn btn-secondary" href="/Predictor/Index/{{driver.driverID}}">Predict ridership</a>
                     </span>
                 </td>
             </tr>
